syntax = "proto3";

package protos.company;

option go_package = "job-posting/gen/go/company;companypb";

message Company {
  string id = 1;
  string name = 2;
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  bool status = 1;
  string message = 2;
}

service CompanyService {
  rpc Create (CreateRequest) returns (CreateResponse);
}


// proto command
// protoc -I=auth/proto/ --go_out=auth/proto/ --go_opt=paths=source_relative \
//     --go-grpc_out=auth/proto/ --go-grpc_opt=paths=source_relative \
//     auth/proto/auth.proto

// protoc -I=auth/proto/ --go_out=auth/proto/ --go_opt=paths=source_relative --go-grpc_out=auth/proto/ --go-grpc_opt=paths=source_relative auth/proto/auth.proto 